# testproj

./: .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: ci.yml
src/: calculator.py  statistics.py
tests/: test_calculator.py  test_example.py  test_statistics.py
